--- a/miniprogram/pages/books/details/details.wxml
+++ b/miniprogram/pages/books/details/details.wxml
@@ -1,32 +1,132 @@
-<form bindsubmit="formSubmit" bindreset="formReset">
-<view class="section" >
-  <view class="section__title">日期 :</view>
-<input type="text" class="input" disabled value="{{date}}" name="date" />
+<form bindsubmit="formSubmit" bindreset="formReset" style="background-color: #ffffff">
+<view class="page">
+
+
+    
+<view class="page__bd">
+
+    <view class="fadeIn" wx:if="{{iosDialog1}}">
+        <view class="weui-mask"></view>
+        <view class="weui-dialog">
+            <view class="weui-dialog__hd"><strong class="weui-dialog__title">弹窗标题</strong></view>
+            <view class="weui-dialog__bd">确定要删除此图片吗？</view>
+            <view class="weui-dialog__ft">
+                <a class="weui-dialog__btn weui-dialog__btn_default" bindtap="close">取消</a>
+                <a class="weui-dialog__btn weui-dialog__btn_primary" bindtap="confirm">确实</a>
+            </view>
+        </view>
+    </view>
+             <view class="weui-cell weui-cell_active" style="background-color: #ffffff">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">日期</view>
+                </view>
+                <view class="weui-cell__bd">
+                    <picker mode="date" value="{{date}}" name="date" start="{{start_date}}" end="{{end_date}}" bindchange="bindDateChange">
+                        <view class="weui-input">{{date}}</view>
+                    </picker>
+                </view>
+            </view>
+
+
+           <view class="weui-cell  weui-cell_select weui-cell_select-after" style="background-color: #ffffff">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">类型 </view>
+                </view>
+                <view class="weui-cell__bd">
+                    <picker bindchange="" name="type" disabled range="{{booksType}}" >
+                        <view class="weui-select weui-select_in-select-after" >{{type}} </view>
+                    </picker>
+                </view>
+            </view>
+
+
+               <view class="weui-cell weui-cell_active" style="background-color: #ffffff ;border-bottom: 1px solid #e4e4e4">
+                <view class="weui-cell__hd">
+                    <view class="weui-label">金额</view>
+                </view>
+                <view class="weui-cell__bd" >
+                    	<input class="weui-input" type="digit" value="{{money}}" name="money" confirm-type="done"  maxlength="8" placeholder="请填写金额" placeholder-class="weui-input__placeholder"  />
+                </view>
+            </view>
+
+
+     	<view class="weui-form__control-area" style="margin: 21px 0">
+			<view class="weui-cells__group weui-cells__group_form">
+				<view class="weui-cells__title">购买商品详情</view>
+				<view class="weui-cells weui-cells_form">
+					<view class="weui-cell ">
+						<view class="weui-cell__bd">
+							<textarea class="weui-textarea" name="goods"value="{{goods}}" bindinput="bindInputGoods" placeholder="请描述你所发生的事情" show-confirm-bar="true" maxlength="200" rows="3"></textarea>
+							<view class="weui-textarea-counter" ><text>{{goods.length}}</text>/200</view>
+						</view>
+					</view>
+				</view>
+			</view>
+		</view>
+	
+
+       
+ </view>
 </view>
-  <view class="section">
-    <view class="section__title">类型 : </view>
-    <input type="digit" class="input" disabled value="{{type}}" name="type"    confirm-type="done" />
-  </view>
-    <view class="section">
-    <view class="section__title">金额 : </view>
-    <input type="digit" class="input" disabled value="{{money}}" name="money"    confirm-type="done" />
-  </view>
-  <view class="section">
-   <view class="section__title">商品 </view>
-   <textarea class="input"  name="goods" disabled value="{{goods}}"  placeholder="请输入商品">
+
+
+  <!--图片描述-->
+ <!-- <view wx:if="{{item.pictures}}" class="list-dImg">
+    <image bindtap="imgYu" data-list="{{item.pictures}}" data-src="{{dImg}}" wx:for="{{item.pictures}}" wx:for-item="dImg" src="{{dImg}}"></image>
+ </view> -->
  
-   </textarea>
 
-  </view>
+    
+        <view class="page__bd section1" >
+        <!-- <view> 
+           <button bindtap="addImg"  class="addPng" type="default">添加图片</button> 
+        </view> -->
 
-      <view class="section" >
-     <view   wx:for="{{images_list}}" >
-       <image bindtap="imgYu" class="image" data-index="{{index}}"  src="{{item}}"></image>
+          
+         
+        <view class="section1 section_gap">
+            <radio-group class="radio-group" bindchange="radioChange">
+                <radio class="radio" wx:for-items="{{items}}" wx:key="name" value="{{item.name}}"   checked="{{item.checked}}">
+                    <text>{{item.value}}</text>
+                </radio>
+            </radio-group>
+        </view>
+    </view>
+
+
+<!-- 
+    <view class="section" >
+     <view   wx:for="{{images_list}}" wx:key="*this">
+       <image bindtap="imgYu" bindlongpress="deleteImage" class="image" data-index="{{index}}"  src="{{item}}"></image>
        <view class="delete-btn"  ></view> 
       </view>
 
-    </view> 
-  <view class="btn-area"> 
-    <button class="submit_button" bindtap="backList" formType="submit">返回</button>
+    </view>  -->
+      <view class="page__bd">
+        <view class="weui-cells">
+            <view class="weui-cell">
+                <view class="weui-cell__bd">
+                    <view class="weui-uploader">
+
+               <view class="weui-uploader__bd">
+                            <view class="weui-uploader__files" id="uploaderFiles">
+                                <block wx:for="{{images_list}}" wx:key="*this">
+                                    <view class="weui-uploader__file" bindtap="imgYu" id="{{item}}">
+                                        <image class="weui-uploader__img" src="{{item}}"  bindlongpress="openIOS1" 
+                                        data-index="{{index}}" mode="aspectFill" />
+                                    </view>
+                                </block>
+                       </view>
+             </view>
+      </view>
+         </view>
+            </view>
+               </view>
+                </view>
+
+  <view class="btn-area" > 
+   <button class="submit_button" bindtap="backList" formType="submit">返回</button>
   </view>
-</form>
+  </form>
+
+
