--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -27,7 +27,7 @@
     <view class="section" wx:for="{{user_list}}" wx:key="*this">
         <view class="section__title1"> {{item.username}}</view>
         <view class="section__title" >支出 : {{item.money}}</view>
-        <view class="section__title" style=" color: red;" wx:if="{{item.money_total <= 0}}">收入 : {{item.money_total}}</view>
+        <view class="section__title" style=" color: red;" wx:if="{{item.money_total < 0}}">收入 : {{item.money_total}}</view>
         <view class="section__title" wx:else>收入 : {{item.money_total}}</view>
     </view>
       <view  class="money_total">{{month}}月 总支出 ：{{money_total}}</view>
